--- a/.config/latte/Moje rozvržení.layout.latte
+++ b/.config/latte/Moje rozvržení.layout.latte
@@ -27,7 +27,7 @@ immutability=1
 plugin=org.kde.latte.plasmoid
 
 [Containments][1][Applets][2][Configuration]
-PreloadWeight=34
+PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
@@ -38,20 +38,19 @@ DialogHeight=913
 DialogWidth=539
 
 [Containments][1][Configuration]
-PreloadWeight=34
+PreloadWeight=0
 
 [Containments][1][General]
 advanced=false
 animationNewWindowSliding=false
 appletOrder=2
-blurEnabled=false
 configurationSticker=true
 durationTime=x3
 iconSize=50
 inConfigureAppletsMode=true
 maxLength=70
 mouseWheelActions=false
-panelShadows=false
+panelOutline=true
 panelSize=10
 panelTransparency=50
 shadowOpacity=60
